// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles creator function arrow function 1`] = `
"import injectSheet from 'react-jss';
injectSheet(() => ({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}), {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function arrow function with return 1`] = `
"import injectSheet from 'react-jss';
injectSheet(() => {
  return {
    \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
  };
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function complex theme prop access over babel config as fn arg 1`] = `
"import injectSheet from 'react-jss';
injectSheet(theme => ({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}), {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function function expression 1`] = `
"import injectSheet from 'react-jss';
injectSheet(function () {
  return {
    \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
  };
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function function ref 1`] = `
"import injectSheet from 'react-jss';

function getStyles() {
  return {
    \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
  };
}

injectSheet(getStyles, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function prop access inside styles creator fn 1`] = `
"import injectSheet from 'react-jss';
const config = {
  primary: 'red'
};
injectSheet(() => ({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}), {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`styles creator function theme prop access over babel config as fn arg 1`] = `
"import injectSheet from 'react-jss';
injectSheet(theme => ({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}), {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;
